--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             </a>
             
             <!-- Secondary Button -->
-            <a href="https://lu.ma/user/sanctumhandmade" target="_blank" class="w-full font-medium rounded-lg text-sm px-5 py-3 text-center transition-all duration-300 transform hover:scale-105 inline-flex items-center justify-center focus:ring-4 focus:outline-none border-2" style="background-color: #8A9281; color: #FFFFFF; border-color: #C2B280;" onmouseover="this.style.backgroundColor='#C2B280'; this.style.borderColor='#B09E6E';" onmouseout="this.style.backgroundColor='#8A9281'; this.style.borderColor='#C2B280';">
+            <a href="https://www.eventbrite.com/e/terrarium-building-at-sanctum-handmade-tickets-1567366458269" target="_blank" class="w-full font-medium rounded-lg text-sm px-5 py-3 text-center transition-all duration-300 transform hover:scale-105 inline-flex items-center justify-center focus:ring-4 focus:outline-none border-2" style="background-color: #8A9281; color: #FFFFFF; border-color: #C2B280;" onmouseover="this.style.backgroundColor='#C2B280'; this.style.borderColor='#B09E6E';" onmouseout="this.style.backgroundColor='#8A9281'; this.style.borderColor='#C2B280';">
                 <svg class="w-5 h-5 inline-block mr-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" d="M6 2a1 1 0 00-1 1v1H4a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V6a2 2 0 00-2-2h-1V3a1 1 0 10-2 0v1H7V3a1 1 0 00-1-1zm0 5a1 1 0 000 2h8a1 1 0 100-2H6z" clip-rule="evenodd"></path>
                 </svg>
